name:                runner
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/rafaellsma/runner
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
data-files:
                    app/*.bmp

executable runner-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -W
  build-depends:    FunGEn == 1.0.*
                   ,base
                   ,OpenGL
                   ,GLUT
                   ,random

source-repository head
  type:     git
  location: https://github.com/rafaellsma/runner
